# CMakeList.txt : CMake project for mydeque, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("mydeque")

# Add source to this project's executable.
add_executable (mydeque "main.cpp" "mydeque.cpp" "mydeque.h")

# TODO: Add tests and install targets if needed.
